@@ -91,12 +91,13 @@ shadow_pw(struct passwd *pw)
 	struct spwd *spw = getspnam(pw->pw_name);
 
 	if (spw != NULL)
-#ifdef HAVE_LIBIAF
-		pw_password = get_iaf_password(pw);
-#else
 		pw_password = spw->sp_pwdp;
-#endif /* HAVE_LIBIAF */
 # endif
+
+#if defined(HAVE_LIBIAF)  &&  !defined(BROKEN_LIBIAF)
+	return(get_iaf_password(pw));
+#endif
+
 # if defined(HAVE_GETPWANAM) && !defined(DISABLE_SHADOW)
 	struct passwd_adjunct *spw;
 	if (issecure() && (spw = getpwanam(pw->pw_name)) != NULL)
